--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             top: 10px;
             left: 10px;
             color: #00FFFF;
-            font-size: clamp(12px, 3vw, 14px);
+            font-size: clamp(16px, 5vw, 20px); /* Increased for mobile readability */
             text-shadow: 0 0 5px #00FFFF;
         }
         #gameOver {
@@ -78,13 +78,13 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: #FF00FF;
-            font-size: clamp(20px, 5vw, 28px);
+            font-size: clamp(24px, 6vw, 32px);
             text-align: center;
             display: none;
             text-shadow: 0 0 10px #FF00FF;
         }
         #gameOver div {
-            font-size: clamp(12px, 2.5vw, 14px);
+            font-size: clamp(14px, 3.5vw, 18px);
             margin-top: 15px;
         }
         #controls {
@@ -121,13 +121,13 @@
         }
         @media (max-width: 600px) {
             #ui {
-                font-size: clamp(10px, 2.5vw, 12px);
+                font-size: clamp(14px, 4vw, 18px); /* Slightly larger for small screens */
             }
             #gameOver {
-                font-size: clamp(18px, 4.5vw, 24px);
+                font-size: clamp(20px, 5vw, 28px);
             }
             #gameOver div {
-                font-size: clamp(10px, 2vw, 12px);
+                font-size: clamp(12px, 3vw, 16px);
             }
             .control-btn {
                 width: 50px;
@@ -160,17 +160,17 @@
         const ctx = canvas.getContext('2d');
         const NUM_STARS = 80;
 
-        // Dynamic canvas sizing with preference for taller canvas
+        // Dynamic canvas sizing to prevent stretching
         let resizeTimeout;
         function resizeCanvas() {
             clearTimeout(resizeTimeout);
             resizeTimeout = setTimeout(() => {
                 const dpr = window.devicePixelRatio || 1;
                 const aspectRatio = 4 / 3;
-                let width = window.innerWidth;
-                let height = window.innerHeight * 0.9; // Use 90% of height to account for safe areas
-                // Prioritize height to "lengthen" canvas for better visibility
-                if (width / height < aspectRatio) {
+                let width = window.innerWidth * 0.95; // 95% to account for safe areas
+                let height = window.innerHeight * 0.9; // 90% of height for safe areas
+                // Maintain aspect ratio without stretching
+                if (width / height > aspectRatio) {
                     width = height * aspectRatio;
                 } else {
                     height = width / aspectRatio;
@@ -180,9 +180,9 @@
                 canvas.style.width = `${width}px`;
                 canvas.style.height = `${height}px`;
                 ctx.scale(dpr, dpr);
-                // Ensure ship starts centered
-                ship.x = canvas.width / (2 * dpr);
-                ship.y = canvas.height / (2 * dpr);
+                // Center ship in logical coordinates
+                ship.x = width / 2;
+                ship.y = height / 2;
             }, 100);
         }
 
@@ -398,8 +398,8 @@
         };
 
         const ship = {
-            x: 0, // Will be set by resizeCanvas
-            y: 0, // Will be set by resizeCanvas
+            x: 0,
+            y: 0,
             vx: 0,
             vy: 0,
             angle: -Math.PI / 2,
@@ -516,9 +516,11 @@
                     y: Math.sin(angle) * radius
                 });
             }
+            // Ensure asteroids spawn fully within canvas bounds
+            const buffer = size; // Buffer to keep asteroids fully on-screen
             return {
-                x: x || Math.random() * canvas.width,
-                y: y || Math.random() * canvas.height,
+                x: x ? x : Math.random() * (canvas.width - 2 * buffer) + buffer,
+                y: y ? y : Math.random() * (canvas.height - 2 * buffer) + buffer,
                 vx: (Math.random() - 0.5) * (size === 50 ? 1 : size === 25 ? 1.5 : 2),
                 vy: (Math.random() - 0.5) * (size === 50 ? 1 : size === 25 ? 1.5 : 2),
                 angle: Math.random() * Math.PI * 2,
@@ -577,8 +579,8 @@
             for (let i = 0; i < numAsteroids; i++) {
                 let x, y;
                 do {
-                    x = Math.random() * canvas.width;
-                    y = Math.random() * canvas.height;
+                    x = Math.random() * (canvas.width - 100) + 50; // Buffer for large asteroids
+                    y = Math.random() * (canvas.height - 100) + 50;
                 } while (Math.hypot(x - ship.x, y - ship.y) < 150);
                 asteroids.push(createAsteroid(x, y, 50));
             }
@@ -666,15 +668,15 @@
         function drawBullet(bullet) {
             ctx.fillStyle = '#00FFFF';
             ctx.shadowColor = '#00FFFF';
-            ctx.shadowBlur = 5;
-            ctx.fillRect(bullet.x - 1, bullet.y - 1, 3, 3);
+            ctx.shadowBlur = 8; // Increased for visibility
+            ctx.fillRect(bullet.x - 3, bullet.y - 1.5, 6, 3); // Larger bullet: 6x3
         }
 
         function drawEnemyBullet(bullet) {
-            ctx.fillStyle = '#FF0000';
-            ctx.shadowColor = '#FF0000';
-            ctx.shadowBlur = 5;
-            ctx.fillRect(bullet.x - 1, bullet.y - 1, 3, 3);
+            ctx.fillStyle = '#FF3333'; // Brighter red for better visibility
+            ctx.shadowColor = '#FF3333';
+            ctx.shadowBlur = 8; // Increased for visibility
+            ctx.fillRect(bullet.x - 3, bullet.y - 1.5, 6, 3); // Larger bullet: 6x3
         }
 
         function drawParticle(particle) {
@@ -692,10 +694,12 @@
         }
 
         function wrap(obj) {
-            if (obj.x < 0) obj.x = canvas.width;
-            if (obj.x > canvas.width) obj.x = 0;
-            if (obj.y < 0) obj.y = canvas.height;
-            if (obj.y > canvas.height) obj.y = 0;
+            // Adjusted to keep objects fully within canvas
+            const buffer = obj.size || obj.radius || 0;
+            if (obj.x < -buffer) obj.x = canvas.width + buffer;
+            if (obj.x > canvas.width + buffer) obj.x = -buffer;
+            if (obj.y < -buffer) obj.y = canvas.height + buffer;
+            if (obj.y > canvas.height + buffer) obj.y = -buffer;
         }
 
         function checkCollision(x1, y1, r1, x2, y2, r2) {
@@ -797,7 +801,7 @@
                     vx: Math.cos(ship.angle) * 8 + ship.vx,
                     vy: Math.sin(ship.angle) * 8 + ship.vy,
                     life: 60,
-                    radius: 2
+                    radius: 3 // Increased radius for collision detection
                 });
                 lastShot = Date.now();
             }
@@ -842,7 +846,7 @@
                         vx: Math.cos(angle + spread) * bulletSpeed,
                         vy: Math.sin(angle + spread) * bulletSpeed,
                         life: 90,
-                        radius: 2
+                        radius: 3 // Increased radius for collision detection
                     });
                     playEnemyLaserSound();
                 }
